--- a/estilos.css
+++ b/estilos.css
@@ -15,7 +15,7 @@ body {
   font-family: sans-serif;
   padding-left:7%;
   padding-right:7%;
-  background-color:#EEEA1E;
+  background-color: #EEE01E;
   font-size:24px;
   text-align:justify;
   margin: 0;
